// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<ExternalLink /> renders link correctly 1`] = `
<DocumentFragment>
  <a
    class="mx_ExternalLink myCustomClass"
    data-testid="test"
    href="test.com"
    rel="noopener"
    target="_self"
  >
    <span>
      react element 
      <b>
        children
      </b>
    </span>
    <svg
      class="mx_ExternalLink_icon"
      fill="currentColor"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M5 3h6a1 1 0 1 1 0 2H5v14h14v-6a1 1 0 1 1 2 0v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2"
      />
      <path
        d="M15 3h5a1 1 0 0 1 1 1v5a1 1 0 1 1-2 0V6.414l-6.293 6.293a1 1 0 0 1-1.414-1.414L17.586 5H15a1 1 0 1 1 0-2"
      />
    </svg>
  </a>
</DocumentFragment>
`;

exports[`<ExternalLink /> renders plain text link correctly 1`] = `
<DocumentFragment>
  <a
    class="mx_ExternalLink myCustomClass"
    data-testid="test"
    href="test.com"
    rel="noreferrer noopener"
    target="_blank"
  >
    test
    <svg
      class="mx_ExternalLink_icon"
      fill="currentColor"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M5 3h6a1 1 0 1 1 0 2H5v14h14v-6a1 1 0 1 1 2 0v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2"
      />
      <path
        d="M15 3h5a1 1 0 0 1 1 1v5a1 1 0 1 1-2 0V6.414l-6.293 6.293a1 1 0 0 1-1.414-1.414L17.586 5H15a1 1 0 1 1 0-2"
      />
    </svg>
  </a>
</DocumentFragment>
`;
